--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: file_sharing
+name: flashbyte
 description: "A new Flutter project."
 publish_to: "none"
 version: 0.1.0
@@ -7,29 +7,27 @@ environment:
   sdk: ^3.8.1
 
 dependencies:
-  archive: ^4.0.7
+  android_intent_plus: ^6.0.0
   external_path: ^2.2.0
   fast_file_picker: ^0.4.6
-  file_selector: ^1.0.3
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.2
-  flutter_m3shapes: ^1.0.0+2
-  heroine: ^0.4.0+1
+  heroine: ^0.5.0+2
   loading_indicator_m3e: ^0.1.1
   material_new_shapes: ^1.0.0
+  mime: ^2.0.0
   mobile_scanner: ^7.0.1
   motor: ^1.0.1
   ns_file_coordinator_util: ^0.25.0
-  open_file: ^3.5.10
+  open_filex: ^4.7.0
   path_provider: ^2.1.5
-  progress_border: ^0.1.5
-  progress_indicator_m3e: ^0.1.1
+  process_run: ^1.2.4
   qr_flutter: ^4.1.0
-  saf_stream: ^0.11.2
   saf_util: ^0.10.0
   uri_to_file: ^1.0.0
   uuid: ^4.5.1
+  widget_zoom: ^0.0.4
 
 dev_dependencies:
   flutter_test:
